improvement: add css reset

--- a/assets/screen.css
+++ b/assets/screen.css
@@ -1,1 +1,30 @@
 /* assets/screen.css */
+
+/* begin CSS reset */
+html,body,div,p,h1,h2,h3,h4,h5,h6,
+ul,ol,li,dl,dt,dd,form,fieldset,caption,
+table,tr,td,th,address,blockquote,img {
+  margin:0;
+  padding:0;
+}
+img, fieldset, object {
+  border:none;
+}
+*, *:after, *:before {
+  flex:1 0 auto; /* safari bugfix */
+  box-sizing:border-box;
+}
+button, label {
+  cursor:pointer;
+}
+html, body {
+  height:100%;
+}
+
+hr {
+ display:none;
+}
+body, button, input, table, textarea, select {
+ font:normal 1em/1.5 arial,helvetica,sans-serif;
+}
+/* end CSS reset */
